--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Wellcome To My World</h1>
+<body><h1>Wellcome To My World</h1>
     <dev>Ok</dev>
 </body>
 </html>
